--- a/Desktop/workspace_itj/board/src/main/resources/application.properties
+++ b/Desktop/workspace_itj/board/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 // ?? JPA ???? Hibernate? ????? ???? SQL? ????? ???? -> ???? SQL? ???? ????
 spring.jpa.properties.hibernate.format_sql=true
 spring.output.ansi.enabled=always
+spring.mvc.static-path-pattern=/webapp/**
+
 
 
